// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`azure-aigateway - Trigger Tests Trigger Keywords Snapshot skill description triggers match snapshot 1`] = `
{
  "description": "Bootstrap and configure Azure API Management as an AI Gateway for securing, observing, and controlling AI models, tools (MCP Servers), and agents. Use this skill when setting up a gateway for models or tools, rate limiting model/tool requests, adding semantic caching, content safety, or load balancing to AI endpoints.",
  "extractedKeywords": [
    "adding",
    "agents",
    "aigateway",
    "aks",
    "authentication",
    "azure",
    "balancing",
    "bicep",
    "bootstrap",
    "caching",
    "cli",
    "configure",
    "content",
    "controlling",
    "deploy",
    "endpoints",
    "gateway",
    "identity",
    "limiting",
    "load",
    "management",
    "mcp",
    "model",
    "models",
    "monitor",
    "observability",
    "observing",
    "rate",
    "requests",
    "safety",
    "securing",
    "security",
    "semantic",
    "servers",
    "setting",
    "skill",
    "this",
    "tool",
    "tools",
    "when",
  ],
  "name": "azure-aigateway",
}
`;

exports[`azure-aigateway - Trigger Tests Trigger Keywords Snapshot skill keywords match snapshot 1`] = `
[
  "adding",
  "agents",
  "aigateway",
  "aks",
  "authentication",
  "azure",
  "balancing",
  "bicep",
  "bootstrap",
  "caching",
  "cli",
  "configure",
  "content",
  "controlling",
  "deploy",
  "endpoints",
  "gateway",
  "identity",
  "limiting",
  "load",
  "management",
  "mcp",
  "model",
  "models",
  "monitor",
  "observability",
  "observing",
  "rate",
  "requests",
  "safety",
  "securing",
  "security",
  "semantic",
  "servers",
  "setting",
  "skill",
  "this",
  "tool",
  "tools",
  "when",
]
`;
